--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,7 @@ h2 {
 .kk {
   font-size: 40px;
   font-family: 'Roboto Condensed', sans-serif;;
-  color: #171717;
+  color: orangered;
   margin: 0px 0 40px 0;
   text-align: center;
 }
