--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,54 +2,50 @@
   box-sizing: border-box;
 }
 
-.title {
- 
-  background: #138D75;
-  margin: 0 auto;
-  min-width: 350px;
-  height: 100%;
-  border-radius: 2px;
-}
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
   color:#F7F7F7;
-  font-size: 32px;
+  font-size: 80px;
   padding-top: 20px;
   padding-bottom: 5px;
-  margin: 0;
+  margin: 100px;
   text-align: center;
 }
 h2 {
  font-family: 'Roboto Condensed', sans-serif;
  color:#F7F7F7;
-  font-size: 16px;
+  font-size: 25px;
   padding: 14px;
   margin: 0;
   text-align: center;
 }
+
 .kk {
-  font-size: 40px;
+  font-size: 45px;
   font-family: 'Roboto Condensed', sans-serif;;
-  color: orangered;
-  margin: 0px 0 40px 0;
+  color: black;
+  margin: 50px 0 10px 0;
   text-align: center;
 }
 
 .layer {
-text-align: center;
 background:  #138D75;   
-height: 350px;
-padding: 30px;
-}          
+height: 100vh;
+padding: 5px;
+text-align: center;
+font-size: 45px;
+margin: 10px 0 10px 0;
+}   
+
 button[type="submit"] {
-  height: 30px;
-  width: 100px;
-  background: #138D75;
-  color: white;
+  height: 60px;
+  width: 400px;
+  background: #fefffe;
+  color: rgb(255, 98, 7);
   border: none;
   cursor: pointer;
-  font-size: 15px;
-  line-height: 30px;
+  font-size: 60px;
+  line-height: 60px;
   font-family: 'Roboto Condensed', sans-serif;
   box-shadow: 0px 0px 10px #131313;
   display: block;
