--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 *::after {
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
 }
 
@@ -25,42 +26,92 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    margin-top: 50px;
   }
 
   h1 {
     font-family: 'Montserrat', sans-serif;  
     color:#f8f5f5;
-    font-size: 50px;
+    font-size: 90px;
     text-align: center;
-      margin-bottom: 35px;
-      margin-top: 35px;
-
-      
-  
+    margin-bottom: 60px;
+    margin-top: 55px;
   }
-  h2 {
-    font-family: 'Montserrat', sans-serif;  
-   color:#faf5f5;
-    font-size: 25px;
-    margin: 0;
-    text-align: center;
-    margin-bottom: 25px;
-  }
-  
-  .log {
-    padding-left: 50px;
-  }
-  
+ 
 .btn {
   display: block;
   background-color: rgb(250, 212, 41);
   cursor: pointer;
   text-align: center;
   text-decoration: none;
-  min-width: 350px;
+  min-width: 300px;
   height: 60px;
   font-size: 22px;
   font-family: 'Montserrat', sans-serif;   
   color: rgb(255, 255, 255);
   margin: 0px auto;
+}
+
+.services h2 {
+  padding-top: 96px;
+  font-size: 53px; 
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;   
+  text-align: center;
+  margin: 0 50px 15px 50px;
+}
+.img_2 {
+  margin: 0px auto;
+ text-align: center;
+ padding-bottom: 40px;
+}
+.img_3 {
+  margin: 80px 0 10px 0;
+  text-align: center;
+}
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+.box-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+}
+.box {
+  flex: 0 0 auto;
+  max-width: 300px;
+  position: relative;
+}
+
+.design {
+  font-size: 21px;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;     
+  position: relative;
+  display: flex;
+  background-size: cover; 
+
+}
+ 
+ .des-1 {
+  font-size: 16px;
+  font-family: 'Roboto Slab', serif;
+   position: absolute;
+    text-align: center;
+    padding: 20px;
+
+ }
+ 
+ .box_2 {
+  flex: 0 0 auto;
+  max-width: 300px;
+  position: relative;
+}
+.box_3 {
+  flex: 0 0 auto;
+  max-width: 300px;
+  position: relative;
 }
