--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,7 +37,7 @@
     margin-bottom: 60px;
     margin-top: 55px;
   }
- 
+
 .btn {
   display: block;
   background-color: rgb(250, 212, 41);
@@ -51,67 +51,82 @@
   color: rgb(255, 255, 255);
   margin: 0px auto;
 }
-
-.services h2 {
-  padding-top: 96px;
-  font-size: 53px; 
-  color: #333333;
-  font-family: 'Montserrat', sans-serif;   
-  text-align: center;
-  margin: 0 50px 15px 50px;
-}
-.img_2 {
-  margin: 0px auto;
- text-align: center;
- padding-bottom: 40px;
-}
-.img_3 {
-  margin: 80px 0 10px 0;
-  text-align: center;
-}
 .container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 24px;
 }
+
+.services h2 {
+  padding-top: 80px;
+  font-size: 53px; 
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;   
+  text-align: center;
+  margin: 5px 5px 5px 5px;
+}
+h3 {
+  font-family: 'Montserrat', sans-serif;   
+  font-size: 18px; 
+  text-align: center; 
+
+}
+.img_2 {
+  margin: 20px 0 20px 0;
+ text-align: center;
+}
+
+.image_1 .des-1 {
+  font-family: 'Roboto Slab', serif;
+  font-size: 16px;
+  text-align: center; 
+}
+  .container {
+    max-width: 1140px;
+    margin: 0px auto;
+    padding: 0 20px;
+  }
+
 .box-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+ }
+
+ .icon {
+  @extend .box-wrapper;
+  flex-wrap: nowrap;
+  flex: 0 0 33%;
+  gap: 3rem;
+  min-height: 300px;
+  margin: 48px 0;
+
+}
+
+.portfolio {
+background: rgb(247, 247, 247);
+margin: 40px 0 10px 0;
+
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0px auto;
+  padding: 0 20px;
+}
+.flex-wrapper {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+.project {
+  @extend .flex-wrapper;
+  flex-wrap: nowrap;
+  flex: 0 0 33%;
+  gap: 3rem;
+  min-height: 300px;
+  margin: 48px 0;
 
 }
-.box {
-  flex: 0 0 auto;
-  max-width: 300px;
-  position: relative;
-}
 
-.design {
-  font-size: 21px;
-  color: #333333;
-  font-family: 'Montserrat', sans-serif;     
-  position: relative;
-  display: flex;
-  background-size: cover; 
 
-}
- 
- .des-1 {
-  font-size: 16px;
-  font-family: 'Roboto Slab', serif;
-   position: absolute;
-    text-align: center;
-    padding: 20px;
-
- }
- 
- .box_2 {
-  flex: 0 0 auto;
-  max-width: 300px;
-  position: relative;
-}
-.box_3 {
-  flex: 0 0 auto;
-  max-width: 300px;
-  position: relative;
-}
