--- a/sass/style.scss
+++ b/sass/style.scss
@@ -81,6 +81,7 @@ h1 {
   color: #333333;
   font-family: 'Montserrat', sans-serif;   
   text-align: center;
+  margin-top: 24px;
 
 }
 
@@ -88,10 +89,11 @@ h3 {
   font-family: 'Montserrat', sans-serif;   
   font-size: 18px; 
   text-align: center; 
+  margin-top: 25px;
 }
 
 .img_2 {
-  margin: 5px 0 40px 0;
+  margin: 5px 0 48px 0;
   text-align: center;
 }
 
@@ -122,20 +124,12 @@ h3 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 24px
-}
-
-.icon {
-@extend .box-wrapper;
-  flex-wrap: nowrap;
-  flex: 0 0 33%;
-  gap: 3rem;
-  min-height: 300px;
-  margin: 48px 0;
+  margin-top: 48px
 }
 
 .portfolio {
   background: rgb(247, 247, 247);
+  margin-bottom: 40px;
 }
 
 .container {
@@ -156,14 +150,42 @@ h3 {
   flex: 0 0 33%;
   gap: 3rem;
   min-height: 300px;
-  margin: 24px 0;
 }
 
-footer {
+.image {
+  margin: 10px 0 20px 0;
+
+}
+h4 {
+  font-family: 'Montserrat', sans-serif;   
+  font-size: 16px; 
+  text-align: center; 
+  background-color: white;
+  height: 30px;
+  margin-top: -5px;
+  padding-top: 10px;
+}
+.two_project {
+  @extend .flex-wrapper;
+    flex-wrap: nowrap;
+    flex: 0 0 33%;
+    gap: 3rem;
+    min-height: 300px;
+    margin: 10px 0 80px 0;
+  }
+
+footer p {
   background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;  
   color: rgb(29, 29, 29);
-  font-size: 14px;
-  height: 50px;
-  padding: 12px;
+  font-size: 16px;
+  text-align: left;
+  padding-top: 5px;
+}
+
+.icon {
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+  top: -30px;
 }
