--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,20 +31,37 @@
 
 .logo {
   position: absolute;
-  left: 316px;
-  top: 50px;
+  left: 270px;
+  top: 30px;
+  height: 10%;
+  text-align: left;
 }
 
-.navigation {
-  position: absolute;
-  padding: 12px;
+ol {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  height: 50px;
+  text-align: center;
   font-family: 'Montserrat', sans-serif;  
-  font-size: 20px;
-  text-align: right; display: inline;
-  color: #ffffff;
-  text-decoration: none; 
- }
+  position: relative;
+  right: -500px;
+  top: -300px;
+
+}
+
+ol > li {
+  float: left;
+  width: 140px;
+}
+
+ol a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 0 15px;
+}
   
 h1 {
   font-family: 'Montserrat', sans-serif;  
