--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
   background-size: 100% auto;
   background-attachment: fixed;
   margin: 0px auto;
+
 }
 
 .splash .overlay {
@@ -69,7 +70,11 @@ h1 {
   font-size: 90px;
   text-align: center;
   margin-bottom: 60px;
-  margin-top: 55px;
+  margin-top: 70px;
+
+  @media (max-width: 767px) {
+    font-size: 35px;
+  }
 }
 
 .btn {
@@ -79,17 +84,23 @@ h1 {
   text-align: center;
   text-decoration: none;
   min-width: 300px;
-  height: 60px;
+  height: 80px;
   font-size: 22px;
   font-family: 'Montserrat', sans-serif;   
   color: rgb(255, 255, 255);
   margin: 0px auto;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+      
+  }
 }
 
 .container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 24px;
+
 }
 
 .services h2 {
@@ -100,6 +111,9 @@ h1 {
   text-align: center;
   margin-top: 24px;
 
+  @media (max-width: 767px) {
+    font-size: 28px;
+  }
 }
 
 h3 {
@@ -107,6 +121,10 @@ h3 {
   font-size: 18px; 
   text-align: center; 
   margin-top: 25px;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+  }
 }
 
 .img_2 {
@@ -123,12 +141,21 @@ h3 {
   flex: 1;
   flex-wrap: nowrap;
   margin-bottom: 48px;
+
+  @media (max-width:767px) {
+    flex-direction: column;
+     }
+
 }
 
 .image_1 .des-1 {
   font-family: 'Roboto Slab', serif;
   font-size: 16px;
   text-align: center; 
+
+  @media (max-width: 767px) {
+    font-size: 12px;
+  }
 }
 
 .container {
@@ -141,7 +168,11 @@ h3 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 48px
+  margin-top: 48px;
+
+  @media (max-width:767px) {
+    flex-direction: column;
+     }
 }
 
 .portfolio {
@@ -159,6 +190,10 @@ h3 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
+  @media (max-width:767px) {
+    flex-direction: column;
+     }
 }
 
 .project {
@@ -167,6 +202,11 @@ h3 {
   flex: 0 0 33%;
   gap: 3rem;
   min-height: 300px;
+
+  @media (max-width:767px) {
+    flex-direction: column;
+    text-align: center;  
+     }
 }
 
 .image {
@@ -181,7 +221,14 @@ h4 {
   height: 30px;
   margin-top: -5px;
   padding-top: 10px;
+
+  @media (max-width: 767px) {
+    font-size: 12px;
+  }
 }
+
+
+
 .two_project {
   @extend .flex-wrapper;
     flex-wrap: nowrap;
@@ -189,7 +236,13 @@ h4 {
     gap: 3rem;
     min-height: 300px;
     margin: 10px 0 80px 0;
+  
+    @media (max-width:767px) {
+      flex-direction: column;
+text-align: center;  
+       }
   }
+
 
 footer p {
   background-color: #ffffff;
@@ -198,6 +251,11 @@ footer p {
   font-size: 16px;
   text-align: left;
   padding-top: 5px;
+
+  @media (max-width: 767px) {
+    font-size: 12px;
+  }
+
 }
 
 .icon {
@@ -205,4 +263,10 @@ footer p {
   font-size: 40px;
   position: relative;
   top: -30px;
+
+  @media (max-width: 767px) {
+    font-size: 20px;
+    text-align: right;
+    position: absolute;
+  }
 }
