--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,81 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
 
+.splash {
+  width: 100%;
+  background-position: center center;
+  background-size: 100% auto;
+  
+}
+
+.backside img {
+  width: 100%;
+  position: relative;
+
+}
+
+.splash-inner {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
+
+.logo {
+  position: absolute;
+  left: 300px;
+  top: 64px;
+  height: 8%;
+  text-align: left;
+}
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  color: #f8f5f5;
+  font-size: 90px;
+  text-align: center;
+  position: absolute;
+  top: 49%;
+  
+  }
+@media (max-width: 767px) {
+  h1 {
+    font-size: 35px;
+  }
+}
+
+.btn {
+  display: block;
+  background-color: rgb(250, 212, 41);
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  width: 300px;
+  height: 80px;
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  margin: 100px 0 0 0;
+position: relative;
+top: 50px;
+}
+@media (max-width: 767px) {
+  .btn {
+    font-size: 16px;
+  }
+}
+
+/*
 .splash {
   max-height: 1140px;
   position: relative;
@@ -20,22 +94,7 @@
   height: 50%;
 }
 
-.splash-inner {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: 50px;
-}
 
-.logo {
-  position: absolute;
-  left: 270px;
-  top: 30px;
-  height: 8%;
-  text-align: left;
-}
 
 ol {
   list-style-type: none;
@@ -45,9 +104,8 @@ ol {
   height: 50px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
-  position: relative;
-  right: -500px;
-  top: -300px;
+  position: absolute;
+
 }
 
 ol > li {
@@ -62,19 +120,7 @@ ol a {
   padding: 0 15px;
 }
 
-h1 {
-  font-family: "Montserrat", sans-serif;
-  color: #f8f5f5;
-  font-size: 90px;
-  text-align: center;
-  margin-bottom: 60px;
-  margin-top: 70px;
-}
-@media (max-width: 767px) {
-  h1 {
-    font-size: 35px;
-  }
-}
+
 
 .btn {
   display: block;
@@ -94,12 +140,8 @@ h1 {
     font-size: 16px;
   }
 }
+*/
 
-.container {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
 
 .services h2 {
   padding-top: 60px;
