--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,15 @@
   width: 100%;
   background-position: center center;
   background-size: 100% auto;
-  
 }
 
 .backside img {
   width: 100%;
   position: relative;
 
+  @media (max-width: 767px) {
+  font-size: 35px;
+  }
 }
 
 .splash-inner {
@@ -33,14 +35,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   
+  @media (max-width: 767px) {
+    font-size: 35px;
+  }
 }
 
 .logo {
-  position: absolute;
-  left: 300px;
-  top: 64px;
-  height: 8%;
-  text-align: left;
+  position: relative;
+  height: 40%;
+  bottom: 360px;
+  right: 200px;
 }
 
 h1 {
@@ -51,11 +55,9 @@ h1 {
   position: absolute;
   top: 49%;
   
-  }
-@media (max-width: 767px) {
-  h1 {
-    font-size: 35px;
-  }
+  @media (max-width: 767px) {
+  font-size: 35px;
+}
 }
 
 .btn {
@@ -70,31 +72,18 @@ h1 {
   font-family: "Montserrat", sans-serif;
   color: rgb(255, 255, 255);
   margin: 100px 0 0 0;
-position: relative;
-top: 50px;
-}
-@media (max-width: 767px) {
-  .btn {
-    font-size: 16px;
+  position: absolute;
+  top: 100px;
+
+  @media (max-width: 767px) {
+  font-size: 16px;
+  
   }
 }
 
-/*
-.splash {
-  max-height: 1140px;
-  position: relative;
-  background-position: center center;
-  background-size: 100% auto;
-  background-attachment: fixed;
-  margin: 0px auto;
+.nav {
+  height: 500px;
 }
-
-.splash .overlay {
-  width: 50%;
-  height: 50%;
-}
-
-
 
 ol {
   list-style-type: none;
@@ -102,10 +91,11 @@ ol {
   margin: 0;
   font-size: 18px;
   height: 50px;
-  text-align: center;
+  text-align: left;
   font-family: "Montserrat", sans-serif;
-  position: absolute;
-
+  position: relative;
+  bottom: 360px;
+  left: 250px;
 }
 
 ol > li {
@@ -117,31 +107,7 @@ ol a {
   display: block;
   color: white;
   text-decoration: none;
-  padding: 0 15px;
 }
-
-
-
-.btn {
-  display: block;
-  background-color: rgb(250, 212, 41);
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  min-width: 300px;
-  height: 80px;
-  font-size: 22px;
-  font-family: "Montserrat", sans-serif;
-  color: rgb(255, 255, 255);
-  margin: 0px auto;
-}
-@media (max-width: 767px) {
-  .btn {
-    font-size: 16px;
-  }
-}
-*/
-
 
 .services h2 {
   padding-top: 60px;
@@ -150,10 +116,9 @@ ol a {
   font-family: "Montserrat", sans-serif;
   text-align: center;
   margin-top: 24px;
-}
-@media (max-width: 767px) {
-  .services h2 {
-    font-size: 28px;
+
+  @media (max-width: 767px) {
+  font-size: 28px;
   }
 }
 
@@ -162,10 +127,9 @@ h3 {
   font-size: 18px;
   text-align: center;
   margin-top: 25px;
-}
-@media (max-width: 767px) {
-  h3 {
-    font-size: 16px;
+
+  @media (max-width: 767px) {
+  font-size: 16px;
   }
 }
 
@@ -184,20 +148,14 @@ h3 {
   flex-wrap: nowrap;
   margin-bottom: 48px;
 }
-@media (max-width: 767px) {
-  .image_1 {
-    flex-direction: column;
-  }
-}
 
 .image_1 .des-1 {
   font-family: "Roboto Slab", serif;
   font-size: 16px;
   text-align: center;
-}
+
 @media (max-width: 767px) {
-  .image_1 .des-1 {
-    font-size: 12px;
+  font-size: 12px;
   }
 }
 
@@ -212,10 +170,9 @@ h3 {
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 48px;
-}
-@media (max-width: 767px) {
-  .box-wrapper {
-    flex-direction: column;
+
+  @media (max-width: 767px) {
+  flex-direction: column;
   }
 }
 
@@ -234,10 +191,9 @@ h3 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-}
-@media (max-width: 767px) {
-  .flex-wrapper, .two_project, .project {
-    flex-direction: column;
+
+  @media (max-width: 767px) {
+  flex-direction: column;
   }
 }
 
@@ -246,11 +202,10 @@ h3 {
   flex: 0 0 33%;
   gap: 3rem;
   min-height: 300px;
-}
+
 @media (max-width: 767px) {
-  .project {
-    flex-direction: column;
-    text-align: center;
+  flex-direction: column;
+  text-align: center;
   }
 }
 
@@ -266,10 +221,9 @@ h4 {
   height: 30px;
   margin-top: -5px;
   padding-top: 10px;
-}
-@media (max-width: 767px) {
-  h4 {
-    font-size: 12px;
+
+  @media (max-width: 767px) {
+  font-size: 12px;
   }
 }
 
@@ -279,11 +233,10 @@ h4 {
   gap: 3rem;
   min-height: 300px;
   margin: 10px 0 80px 0;
-}
-@media (max-width: 767px) {
-  .two_project {
-    flex-direction: column;
-    text-align: center;
+
+  @media (max-width: 767px) {
+  flex-direction: column;
+  text-align: center;
   }
 }
 
@@ -294,10 +247,9 @@ footer p {
   font-size: 16px;
   text-align: left;
   padding-top: 5px;
-}
-@media (max-width: 767px) {
-  footer p {
-    font-size: 12px;
+
+  @media (max-width: 767px) {
+  font-size: 12px;
   }
 }
 
@@ -306,12 +258,11 @@ footer p {
   font-size: 40px;
   position: relative;
   top: -30px;
-}
-@media (max-width: 767px) {
-  .icon {
-    font-size: 20px;
-    text-align: right;
-    position: absolute;
+
+  @media (max-width: 767px) {
+  font-size: 20px;
+  text-align: right;
+  position: absolute;
   }
 }
 
